# ACDS-FYP

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  FRONTEND_DASHBOARD_UPDATES.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_quickstart.py
.github/workflows/: ci.yaml  ci.yml
.specify/memory/: constitution.md
.tmp/: retrain_malware_model.py  run_malware_training.py
backend/: .dockerignore  .env.example  BACKEND_INTEGRATION.md  Dockerfile  README.md  main.py  test_api.py  test_system.py
backend/agents/: README.md  __init__.py  alert_agent.py  detection_agent.py  explainability_agent.py  intel_agent.py  malware_detection_agent.py  malware_explainability_agent.py  malware_orchestrator_agent.py  malware_report_agent.py  malware_response_agent.py  orchestrator_agent.py  ransomware_detection_agent.py  ransomware_explainability_agent.py  ransomware_orchestrator_agent.py  ransomware_response_agent.py  report_agent.py  response_agent.py
backend/api/: auth_service.py
backend/config/: settings.py
backend/core/: config_loader.py  logger.py  utils.py
backend/data/: blocked_senders.json  incidents.json
backend/database/: __init__.py  connection.py  crud.py  models.py
backend/ml/: __init__.py  malware_preprocess.py  malware_service.py  pe_service.py  phishing_service.py  preprocess.py  ransomware_preprocess.py  ransomware_service.py
backend/models/: schemas.py
backend/orchestration/: automation_rules.json  encryption_detector.py
data/: README.md  incidents.json
docs/: AGENT_ARCHITECTURE.md  FUTURE_EXTENSIONS.md  RANSOMWARE_DETECTION_ARCHITECTURE.md  README.md  SOAR_RULES.md  SYSTEM_DESIGN.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
lab/: README.md
ml_training/: README.md  malware_training.ipynb  pe_header_ransomware_model.ipynb  phishingmodel.ipynb  ransomwaremodel .ipynb  train_credential_stuffing.py
models/: README.md
reports/: README.md  credential_stuffing_model_metrics.json  reports_metadata.json
scripts/: setup.ps1  setup.sh
test_cases/: README.md  test_admin_authentication.py  test_ai_report_generation.py  test_analyst_feedback.py  test_automated_response.py  test_credential_stuffing_detection.py  test_dashboard_visualization.py  test_data_ingestion.py  test_malware_detection.py  test_phishing_detection.py  test_ransomware_detection.py
tests/: README.md
(+111 files in other folders)
