[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "acds"
version = "2.0.0"
description = "Autonomous Cyber Defense System"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]",
    "python-multipart",
    "pydantic[email]",
    "PyJWT>=2.8.0",
    "passlib[bcrypt]",
    "pymongo>=4.6.0",
    "motor>=3.3.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "joblib>=1.3.0",
    "nltk>=3.8.0",
    "datasets>=2.15.0",
    "reportlab>=4.0.0",
    "python-dotenv>=1.0.0",
    "apscheduler>=3.10.0",
    "requests>=2.31.0",
    "httpx>=0.25.0",
    "structlog>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "isort",
    "pytest",
    "pytest-asyncio",
    "pre-commit",
]

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.venv
    | \.hf_cache
    | node_modules
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = [
    "tests",
    "backend/tests",
]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".venv",
    ".hf_cache",
    "node_modules",
    "dist",
    "__pycache__",
    "frontend",
    "ml_training/.cache",
]
per-file-ignores = [
    "__init__.py:F401",
]
max-complexity = 10
statistics = true

[flake8]  # legacy section for flake8 < 5
max-line-length = 88
extend-ignore = E203, W503
exclude = .venv,.hf_cache,node_modules,dist,__pycache__,frontend,ml_training/.cache
per-file-ignores = __init__.py:F401
max-complexity = 10
statistics = True

[tool.setuptools.packages.find]
where = ["backend", "."]
include = ["acds*", "backend*"]
